<resources>
    <string name="app_name">Integrador Android</string>

    //Home Activity
    <string name="home_title">Not Bored</string>
    <string name="home_title_participants">Participants</string>
    <string name="home_edit_text_hint">Enter number of participants (min.1)</string>
    <string name="home_btn_start">Start</string>
    <string name="home_terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="home_snack_bar_error">Please enter a number greater than 0</string>

    //PopUp Terms and Conditions
    <string name="popup_terms_and_conditions_close_btn_content">Close button</string>
    <string name="popup_terms_and_conditions_title">Terms and conditions</string>
    <string name="popup_terms_and_conditions_sub_title">Not Bored</string>
    <string name="popup_terms_and_conditions_text">Lorem ipsum dolor sit amet consectetur adipiscing elit inceptos ridiculus iaculis,
                                                    nullam ligula elementum duis tellus maecenas nec fermentum sed dictum
                                                    laoreet, taciti donec habitant quam purus ultricies porta posuere sociis. Cubilia
                                                    senectus netus integer tempor dignissim viverra nostra tellus scelerisque aliquet,
                                                    semper penatibus tempus sociosqu class sociis bibendum justo etiam, rutrum
                                                    aenean et eget pretium volutpat eu dictum dictumst.
                                                    Praesent gravida ridiculus cursus luctus maecenas in libero mi interdum, auctor
                                                    ullamcorper eget nam eros condimentum litora tristique erat, fusce rhoncus
                                                    mauris cras aptent non et ultricies. Iaculis porttitor etiam pulvinar proin fringilla
                                                    ad, sem ornare sociosqu ultrices litora himenaeos egestas, eros laoreet mauris
                                                    leo porta. Nibh interdum facilisis dapibus magnis phasellus tortor fusce nostra
                                                    quam, ante non elementum himenaeos id hac et hendrerit eros, dui at sollicitudin
                                                    turpis viverra molestie cras quis.
                                                    Dignissim faucibus auctor in vitae porttitor tellus nascetur tempor sociosqu,
                                                    elementum dis ultricies eu tempus tincidunt lectus posuere, et ac interdum
                                                    commodo montes convallis curae facilisis. Vitae diam phasellus litora ad aenean
                                                    himenaeos, magnis malesuada nec metus faucibus, turpis mollis hac lacinia
                                                    lacus. Condimentum dis in sed vel molestie integer, gravida eget volutpat
                                                    interdum bibendum scelerisque magnis, penatibus non sollicitudin convallis
                                                    egestas. Aptent mi ligula conubia justo habitant cubilia tellus curabitur, a nisi
                                                    integer non eget vivamus cursus hac, lacus rutrum ridiculus tempor litora nostra
                                                    dis.
                                                    Nisl pulvinar taciti tellus diam quam dictum cursus potenti euismod natoque
                                                    feugiat mattis ornare tortor, aliquam orci dapibus inceptos id egestas ante viverra
                                                    donec aptent suscipit nulla. Eget nisl fringilla cras felis maecenas nisi ridiculus id
                                                    conubia hac primis sem ullamcorper porttitor, rutrum ac sodales ultrices
                                                    vestibulum cum leo semper fusce porta eu fermentum. Proin nisi suspendisse
                                                    class facilisi curabitur quisque, fusce vulputate semper a nulla velit, duis in orci
                                                    faucibus turpis. Risus metus magnis aliquam accumsan laoreet congue per,
                                                    tempus purus et odio senectus sodales vulputate, ligula malesuada dis habitasse
                                                    nullam pellentesque.</string>

    //Activities List
    <string name="list_activities_title">Activities</string>
    <string name="list_btn_education">education</string>
    <string name="list_btn_recreational">recreational</string>
    <string name="list_btn_social">social</string>
    <string name="list_btn_diy">diy</string>
    <string name="list_btn_charity">charity</string>
    <string name="list_btn_cooking">cooking</string>
    <string name="list_btn_relaxation">relaxation</string>
    <string name="list_btn_music">music</string>
    <string name="list_btn_busywork">busywork</string>


    //Suggestion Activity
    <string name="suggestion_snack_bar_error">No activity was found for that number of participants</string>
</resources>